--- a/Assets/CSS/estilos.css
+++ b/Assets/CSS/estilos.css
@@ -5,9 +5,14 @@
 
     --color-fuente:#000;
     --color-resaltar:#BF6900;
+    --fuente-main:'Roboto', sans-serif;
 }
 
 /* Empezamos con el navbar */
+
+*{
+    font-family: var(--fuente-main);
+}
 
 .navbar-color{ /* Clase que se aplicara al navbar */
     background-color: var(--color-secundario)!important;
@@ -69,8 +74,8 @@
 
 .banner-area{
     width:100%;
-    height:70vh;
-    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(/Assets/img/contactanos/contactanos.webp);
+    height:100vh;
+    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(/Assets/img/living2.jpg);
     background-size:cover;
 }        
 
@@ -106,9 +111,7 @@
 }
 
 /* Termina hero */
-.grupo{
-    
-}
+
 
 
 
@@ -168,60 +171,23 @@
     transform: scale(1.1);
 
   }
-/*Formulario*/
-
-#card{
-    padding-right: 10px;
-    border: solid white;
-}
-#btnSubmit{ /* Clase que se aplicara al boton de login */
-    background-color: var(--color-primario)!important;
-    border-color: var(--color-secundario)!important;
-    transition: .2s ease-in-out 0s;
-    border-radius: .5px;
-    padding: 5px 40px;
-    align-items: center;
-    margin-left: 65px;
-    margin-top: 20px;
-}
-
-/* efecto de boton login */
-#btnSubmit:hover{
-    /* button expand hover */
-    background-color: var(--color-resaltar)!important;
-    transform: scale(1.1);
-    
-
-}
-/*Efecto que se le aplicara a los inputs*/
-.form{
-    margin-left: 20px;
-}
-input{
-    margin-left: 30px;
-}
-
-
-
-input[type=text] {
-    border: none;
-    border-bottom: 2px solid var(--color-primario);
-    
-  }
-
-  
 
 
 
 
-.warnings{
-    width: 200px;
-    margin: auto;
-    color: red;
-    padding-top: 20px;
-    margin-left: 10px;
-    
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
   /* Footer */
