--- a/Assets/CSS/formulario/formulario.css
+++ b/Assets/CSS/formulario/formulario.css
@@ -1,16 +1,13 @@
-body{/*para poner de fondo una imagen*/
-    margin: 0;
-    padding: 0;
-    background: url(/Assets/img/formulario/casa.webp);   
-    background-size: cover;
-    background-position: center;
-    font-family: sans-serif;
+:root{ /* Custom propierties  */
+
+    --color-primario:#03364D;
+    --color-secundario:#FFF;
+
+    --color-fuente:#000;
+    --color-resaltar:#BF6900;
 }
 
-
-#titulo{
-    background-color: #61c1bc;
-}
+/* Empezamos con el navbar */
 
 .navbar-color{ /* Clase que se aplicara al navbar */
     background-color: var(--color-secundario)!important;
@@ -18,55 +15,180 @@ body{/*para poner de fondo una imagen*/
     font-weight: 500!important;
     opacity: 0.9!important;
 }
-
-
-
-
-#barra1{
- 
-border-radius: 60px;
-height: auto;
-width: auto;
-
+.text-menu a{
+    color:var(--color-fuente)!important;
+    transition: .2s ease-in-out 0s;
 }
 
-#barra2{
-border-radius: 60px;
-
-height: auto;
-width: auto;
+.text-menu a:hover{
+    color:var(--color-primario)!important;
 }
 
-#barra3{
-    border-radius: 60px;
+.btn-signup{ /* Clase que se aplicara al boton de login */
+    background-color: var(--color-primario)!important;
+    border-color: var(--color-secundario)!important;
+    transition: .2s ease-in-out 0s;
+    border-radius: .5px;
+    padding: 5px 40px;
+}
+
+/* efecto de boton login */
+.btn-signup:hover{
+    /* button expand hover */
+    background-color: var(--color-resaltar)!important;
+    transform: scale(1.1);
     
-    height: auto;
-    width: auto;
+
+}
+
+/* Linea que aparecera en menú responsive en celular */
+@media (max-width: 575px){
+    .border-mq{
+        border-top-style: groove; 
+        border-top-width: 1px;
+    }
+    .btn-signup{
+        margin-bottom: 30px;
     }
     
-    #barra4{
-        border-radius: 60px;
-        height: auto;
-        width: auto;
-        }
-     #barra5{
-        border-radius: 60px;
-            height: auto;
-            width: auto;
-            }
-                  
-/*aqui empiezan los botones */
-#button{
-    background-color: #61c1bc;
 }
-#botoncito{
-background-color: #61c1bc;
-border-radius: 60px;
 
+
+.btn-menu{
+    background-color: var(--color-primario)!important;
+    border-color: var(--color-secundario)!important;
+    transition: .2s ease-in-out 0s;
+    border-radius: .5px;
+    padding: 5px 40px;
+    color:var(--color-secundario)!important;
 }
+
+
+
+/* Inicia Hero */
+
+.banner-area{
+    width:100%;
+    height:100vh;
+    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(/assets/img/formulario/casa.webp);
+    background-size:cover;
+}        
+
+.content-area{
+    height:100%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content{
+    text-align: center;
+}
+
+.content h1{
+    color:#fff;
+}
+
+.content p{
+    color:#ddd;
+}
+
+.content .btn{
+    border:none;
+    outline:none;
+    padding:15px;
+    margin-top:100px;
+    border-radius: 4px;
+    color:#eee;
+    font-size: 18px;
+    cursor: pointer;    
+    background:#222;             
+}
+
+/* Termina hero */
+
+
+
+
+
+/* clases cards */
+
+.cursor-pointer{
+    cursor: pointer;
+}
+
+
+.icon-square {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 3rem;
+    height: 3rem;
+    font-size: 1.5rem;
+    border-radius: .75rem;
+  }
+  
+  .rounded-4 { border-radius: .5rem; }
+  .rounded-5 { border-radius: 1rem; }
+  
+  .text-shadow-1 { text-shadow: 0 .125rem .25rem rgba(0, 0, 0, .25); }
+  .text-shadow-2 { text-shadow: 0 .25rem .5rem rgba(0, 0, 0, .25); }
+  .text-shadow-3 { text-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .25); }
+  
+  .card-cover {
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+  .cards-responsive{
+    padding:90px !important;
+}
+  @media (max-width: 780px){
+      .cards-responsive{
+          padding:60px !important;
+      }
+  }
+
+  .btn-modal{
+    background-color: var(--color-primario)!important;
+    border-color: var(--color-secundario)!important;
+    transition: .2s ease-in-out 0s;
+    border-radius: .5px;
+    padding: 5px 40px;
+    color:var(--color-secundario)!important;
+  }
+
+
+  .btn-modal:hover{
+    
+
+    background-color: crimson!important;
+    transform: scale(1.1);
+
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  /* Footer */
 
 .footer-class{
-    background-color: var  #61c1bc;
-    color: var #61c1bc;
+    background-color: var(--color-primario)!important;
+    color: var(--color-secundario)!important;
     font-weight: bold;
 }
