--- a/Assets/CSS/contacto/contact.css
+++ b/Assets/CSS/contacto/contact.css
@@ -68,16 +68,14 @@
     color:var(--color-secundario)!important;
 }
 
-
-
 /* Inicia Hero */
 
 .banner-area{
     width:100%;
     height:70vh;
-    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(/Assets/img/living2.jpg);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(/Assets/img/contactanos/contactanos.webp);
     background-size:cover;
-}        
+}          
 
 .content-area{
     height:100%;
@@ -114,29 +112,7 @@
 
 
 
-
-
 /* clases cards */
-
-
-
-.text-cards ul{
-    color:var(--color-secundario);
-    background-color: rgba(255, 255, 255, 0.466);
-    border-radius: 10px !important;
-    backdrop-filter: blur(2px)!important;
-    padding: 8px;
-    text-shadow : 3px 2px 5px #000;
-}
-
-.equipo-dinamita{
-    color:var(--color-secundario);
-    background-color: rgba(255, 255, 255, 0.466);
-    border-radius: 10px !important;
-    backdrop-filter: blur(2px)!important;
-    padding: 8px;
-    text-shadow : 3px 2px 5px #000;
-}
 
 .cursor-pointer{
     cursor: pointer;
@@ -191,24 +167,96 @@
     transform: scale(1.1);
 
   }
+/*Formulario*/
+
+#card{
+    padding-right: 10px;
+    border: solid white;
+}
+#btnSubmit{ /* Clase que se aplicara al boton de login */
+    background-color: var(--color-primario)!important;
+    border-color: var(--color-secundario)!important;
+    transition: .2s ease-in-out 0s;
+    border-radius: .5px;
+    padding: 5px 40px;
+    align-items: center;
+    margin-left: 65px;
+    margin-top: 20px;
+}
+
+/* efecto de boton login */
+#btnSubmit:hover{
+    /* button expand hover */
+    background-color: var(--color-resaltar)!important;
+    transform: scale(1.1);
+    
+
+}
+
+/* Spinner */
 
 
+#spinner {
+    display: none;
+    justify-content: center;
+    padding: 3rem 0;
+}
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.sk-chase {
+    width: 40px;
+    height: 40px;
+    position: relative;
+    animation: sk-chase 2.5s infinite linear both;
+  }
+  
+  .sk-chase-dot {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0; 
+    animation: sk-chase-dot 2.0s infinite ease-in-out both; 
+  }
+  
+  .sk-chase-dot:before {
+    content: '';
+    display: block;
+    width: 25%;
+    height: 25%;
+    background-color: #0288d1;
+    border-radius: 100%;
+    animation: sk-chase-dot-before 2.0s infinite ease-in-out both; 
+  }
+  
+  .sk-chase-dot:nth-child(1) { animation-delay: -1.1s; }
+  .sk-chase-dot:nth-child(2) { animation-delay: -1.0s; }
+  .sk-chase-dot:nth-child(3) { animation-delay: -0.9s; }
+  .sk-chase-dot:nth-child(4) { animation-delay: -0.8s; }
+  .sk-chase-dot:nth-child(5) { animation-delay: -0.7s; }
+  .sk-chase-dot:nth-child(6) { animation-delay: -0.6s; }
+  .sk-chase-dot:nth-child(1):before { animation-delay: -1.1s; }
+  .sk-chase-dot:nth-child(2):before { animation-delay: -1.0s; }
+  .sk-chase-dot:nth-child(3):before { animation-delay: -0.9s; }
+  .sk-chase-dot:nth-child(4):before { animation-delay: -0.8s; }
+  .sk-chase-dot:nth-child(5):before { animation-delay: -0.7s; }
+  .sk-chase-dot:nth-child(6):before { animation-delay: -0.6s; }
+  
+  @keyframes sk-chase {
+    100% { transform: rotate(360deg); } 
+  }
+  
+  @keyframes sk-chase-dot {
+    80%, 100% { transform: rotate(360deg); } 
+  }
+  
+  @keyframes sk-chase-dot-before {
+    50% {
+      transform: scale(0.4); 
+    } 100%, 0% {
+      transform: scale(1.0); 
+    } 
+  }
 
   /* Footer */
 
