se agrego un efecto shadow en las productos del html de productos, ademas se crearon otros html para la paginacion de productos, se planea generar 3 paginas por ciudad y cambiar los url y descripcion de los objetos json. ademas se agrego un caroussel en el index que es una propuesta y sigue en desarrollo

--- a/Assets/CSS/index/index.css
+++ b/Assets/CSS/index/index.css
@@ -101,6 +101,14 @@
 #img-cambio{
     width: 250px;
 }
+li{
+    text-align: center;
+}
+#nombRes{
+    color: var(--color-resaltar);
+}
+
+
 
 
   /* Footer */
