--- a/Assets/CSS/estilos.css
+++ b/Assets/CSS/estilos.css
@@ -111,6 +111,29 @@
 }
 
 /* Termina hero */
+#btn-producto{ /* Clase que se aplicara al boton de login */
+    background-color: var(--color-primario)!important;
+    border-color: var(--color-secundario)!important;
+    transition: .2s ease-in-out 0s;
+    border-radius: 10px;
+    margin-left: 20px;
+    padding: 5px 30px;
+    color: var(--color-secundario);
+}
+
+/* efecto de boton login */
+#btn-producto:hover{
+    /* button expand hover */
+    background-color: var(--color-resaltar)!important;
+    transform: scale(1.1);
+    
+
+}
+.img-carousel{
+    width: 50%;
+    height: 200px;
+    backdrop-filter: grayscale(30%);
+}
 
 
 
