--- a/Assets/CSS/registro/registro.css
+++ b/Assets/CSS/registro/registro.css
@@ -1,104 +1,36 @@
-:root{
-    --color-primario:#03364D;
-    --color-primarioB:#03364d91;
-    --color-secundario:#FFF;
-    --color-fuente:#000;
-    --color-resaltar:#BF6900;
-    --fuente-main:'Roboto', sans-serif;
-}
-.bg-blur{
-
-    background-color: var(--color-primarioB) !important;
-    backdrop-filter: blur(5px)!important;
-    padding: 3rem;
-    margin: 10px 0px;
-    border-radius: 20px;
-}
-
-.bg-blur-img{
-
-    margin-top:10px ;
-    margin-bottom:100px ;
-}
-
-@media (max-width: 780px){
-    .bg-blur{
-        margin-top:0px ;
-        margin-bottom:0px ;
-    }
-
-    .bg-blur-img{
-        margin-top:20px ;
-        margin-bottom:0px ;
-    }
+.btn-enviar {
+  padding: 10px 40px !important;
+  margin-top: 10px !important;
 
 }
-    
 
-
-
-
-/* Spinner */
-
-
-#spinner {
-    display: none;
-    justify-content: center;
-    padding: 3rem 0;
+.banner-area {
+  height:80rem;
+  background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(/Assets/img/living2.jpg);
+  background-size:cover;
 }
 
+.formulario-mq{
+  padding-left: 10rem !important;
+  padding-right:10rem !important;
+}
 
-.sk-chase {
-    width: 40px;
-    height: 40px;
-    position: relative;
-    animation: sk-chase 2.5s infinite linear both;
+@media (max-width: 500px) {
+  .formulario-mq {
+   
+    padding:4rem !important;
   }
-  
-  .sk-chase-dot {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0; 
-    animation: sk-chase-dot 2.0s infinite ease-in-out both; 
+  .banner-area {
+    height:65rem;
+    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(/Assets/img/living2.jpg);
+    background-size:cover;
   }
+}
+
+.warnings{
   
-  .sk-chase-dot:before {
-    content: '';
-    display: block;
-    width: 25%;
-    height: 25%;
-    background-color: #0288d1;
-    border-radius: 100%;
-    animation: sk-chase-dot-before 2.0s infinite ease-in-out both; 
-  }
-  
-  .sk-chase-dot:nth-child(1) { animation-delay: -1.1s; }
-  .sk-chase-dot:nth-child(2) { animation-delay: -1.0s; }
-  .sk-chase-dot:nth-child(3) { animation-delay: -0.9s; }
-  .sk-chase-dot:nth-child(4) { animation-delay: -0.8s; }
-  .sk-chase-dot:nth-child(5) { animation-delay: -0.7s; }
-  .sk-chase-dot:nth-child(6) { animation-delay: -0.6s; }
-  .sk-chase-dot:nth-child(1):before { animation-delay: -1.1s; }
-  .sk-chase-dot:nth-child(2):before { animation-delay: -1.0s; }
-  .sk-chase-dot:nth-child(3):before { animation-delay: -0.9s; }
-  .sk-chase-dot:nth-child(4):before { animation-delay: -0.8s; }
-  .sk-chase-dot:nth-child(5):before { animation-delay: -0.7s; }
-  .sk-chase-dot:nth-child(6):before { animation-delay: -0.6s; }
-  
-  @keyframes sk-chase {
-    100% { transform: rotate(360deg); } 
-  }
-  
-  @keyframes sk-chase-dot {
-    80%, 100% { transform: rotate(360deg); } 
-  }
-  
-  @keyframes sk-chase-dot-before {
-    50% {
-      transform: scale(0.4); 
-    } 100%, 0% {
-      transform: scale(1.0); 
-    } 
-  }
+  color:crimson !important;
+  border-radius: 5px;
+  font-weight: bold;
+  padding: 20px;
+}
