Se arreglaron textos en el navbar y enlaces, ademas se agrego en el index un efecto con js y se trabajo en front end

--- a/Assets/CSS/estilos.css
+++ b/Assets/CSS/estilos.css
@@ -214,10 +214,25 @@
     transform: scale(1.1);
 
   }
+  /*Estilos de cambios de letra*/
+  @import url(https://fonts.googleapis.com/css?family=Khula:700);
 
-
-
-
+  .hidden {
+    opacity:0;
+  }
+  .console-container {
+   
+    font-family:Khula;
+    font-size:3em;
+    height:100px;
+    width:450px;
+  margin-bottom: 10px;
+    color:white;
+   
+  }
+.cambio{
+    font-size: 20px;
+}
 
 
 
