--- a/Assets/CSS/estilos.css
+++ b/Assets/CSS/estilos.css
@@ -75,7 +75,7 @@
 .banner-area{
     width:100%;
     height:70vh;
-    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(/Assets/img/living2.jpg);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(/proyecto-integrador-hogari/Assets/img/living2.jpg);
     background-size:cover;
 }        
 
