--- a/Assets/CSS/FormularioArrendador.css/FormularioArrendador.css
+++ b/Assets/CSS/FormularioArrendador.css/FormularioArrendador.css
@@ -5,9 +5,14 @@
 
     --color-fuente:#000;
     --color-resaltar:#BF6900;
+    --fuente-main:'Roboto', sans-serif;
 }
 
 /* Empezamos con el navbar */
+
+*{
+    font-family: var(--fuente-main);
+}
 
 .navbar-color{ /* Clase que se aplicara al navbar */
     background-color: var(--color-secundario)!important;
@@ -28,8 +33,8 @@
     background-color: var(--color-primario)!important;
     border-color: var(--color-secundario)!important;
     transition: .2s ease-in-out 0s;
-    border-radius: .5px;
-    padding: 5px 40px;
+    border-radius: 10px !important;
+    padding: 5px 30px;
 }
 
 /* efecto de boton login */
@@ -54,7 +59,7 @@
 }
 
 
-.btn-menu{ /* Clase que se aplicara al boton de menu */
+.btn-menu{
     background-color: var(--color-primario)!important;
     border-color: var(--color-secundario)!important;
     transition: .2s ease-in-out 0s;
@@ -64,23 +69,193 @@
 }
 
 
-h3{
-    color: var(--color-primario)!important;
+
+/* Inicia Hero */
+
+.banner-area{
+    width:100%;
+    height:70vh;
+    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(/Assets/img/living2.jpg);
+    background-size:cover;
+}        
+
+.content-area{
+    height:100%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content{
+    text-align: center;
+}
+
+.content h1{
+    color:#fff;
+}
+
+.content p{
+    color:#ddd;
+}
+
+.content .btn{
+    border:none;
+    outline:none;
+    padding:15px;
+    margin-top:100px;
+    border-radius: 4px;
+    color:#eee;
+    font-size: 18px;
+    cursor: pointer;    
+    background:#222;             
+}
+
+/* Termina hero */
+#btn-producto{ /* Clase que se aplicara al boton de login */
+    background-color: var(--color-primario)!important;
+    border-color: var(--color-secundario)!important;
+    transition: .2s ease-in-out 0s;
+    border-radius: 10px;
+    margin-left: 20px;
+    padding: 5px 30px;
+    color: var(--color-secundario);
+}
+
+/* efecto de boton login */
+#btn-producto:hover{
+    /* button expand hover */
+    background-color: var(--color-resaltar)!important;
+    transform: scale(1.1);
+    
+
+}
+.img-carousel{
+    width: 50%;
+    height: 200px;
+    backdrop-filter: grayscale(30%);
 }
 
 
-/*.genero input:checked{
+
+
+
+/* clases cards */
+
+
+
+.text-cards ul{
+    color:var(--color-secundario);
+    background-color: rgba(255, 255, 255, 0.466);
+    border-radius: 10px !important;
+    backdrop-filter: blur(2px)!important;
+    padding: 8px;
+    text-shadow : 3px 2px 5px #000;
+}
+
+.equipo-dinamita{
+    color:var(--color-secundario);
+    background-color: rgba(255, 255, 255, 0.466);
+    border-radius: 10px !important;
+    backdrop-filter: blur(2px)!important;
+    padding: 8px;
+    text-shadow : 3px 2px 5px #000;
+}
+
+.cursor-pointer{
+    cursor: pointer;
+}
+
+
+.icon-square {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 3rem;
+    height: 3rem;
+    font-size: 1.5rem;
+    border-radius: .75rem;
+  }
+  
+  .rounded-4 { border-radius: .5rem; }
+  .rounded-5 { border-radius: 1rem; }
+  
+  .text-shadow-1 { text-shadow: 0 .125rem .25rem rgba(0, 0, 0, .25); }
+  .text-shadow-2 { text-shadow: 0 .25rem .5rem rgba(0, 0, 0, .25); }
+  .text-shadow-3 { text-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .25); }
+  
+  .card-cover {
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+  .cards-responsive{
+    padding:90px !important;
+}
+  @media (max-width: 780px){
+      .cards-responsive{
+          padding:60px !important;
+      }
+  }
+
+  .btn-modal{
     background-color: var(--color-primario)!important;
-}*/
+    border-color: var(--color-secundario)!important;
+    transition: .2s ease-in-out 0s;
+    border-radius: .5px;
+    padding: 5px 40px;
+    color:var(--color-secundario)!important;
+  }
+
+
+  .btn-modal:hover{
+    
+
+    background-color: crimson!important;
+    transform: scale(1.1);
+
+  }
+
+
+
+.imagen-casa{
+border-radius:3rem;
+height: 300px;
+padding: 1.5rem;
+    
+}
+
+@media (max-width: 768px){
+    .imagen-casa{
+        
+        width: 90%;
+    }
+}
+
+
+
+.console-container{
+    font-size: 2rem;
+
+}
+
+
+
+
+
+
+
+
+
 
   /* Footer */
 
-  .footer-class{
+.footer-class{
     background-color: var(--color-primario)!important;
     color: var(--color-secundario)!important;
     font-weight: bold;
 }
 
+
 .warnings{
-    color: red;
+    color:red
 }
